--- a/os/hal/dox/flash.dox
+++ b/os/hal/dox/flash.dox
@@ -18,5 +18,39 @@
  * @defgroup HAL_FLASH Generic Flash Driver Interface
  * @brief   HAL Generic Flash Driver Interface.
  *
+ * @section flash_1 Driver State Machine
+ * The flash driver implements a state machine internally, not all the driver
+ * functionalities can be used in any moment, any transition not explicitly
+ * shown in the following diagram has to be considered an error and shall
+ * be captured by an assertion (if enabled).
+ * @dot
+  digraph example {
+    rankdir="LR";
+    node [shape=circle, fontname=Helvetica, fontsize=8, fixedsize="true", width="0.9", height="0.9"];
+    edge [fontname=Helvetica, fontsize=8];
+    stop  [label="FLS_STOP\nLow Power"];
+    uninit [label="FLS_UNINIT", style="bold"];
+    ready [label="FLS_READY\nClock Enabled"];
+    read [label="FLS_READ\nReading"];
+    program [label="FLS_PGM\nProgramming"];
+    erasea [label="FLS_ERASEA\nErasing All"];
+    erases [label="FLS_ERASES\nErasing Sector"];
+    uninit -> stop [label=" flashInit()", constraint=false];
+    stop -> stop [label=" flashStop()"];
+    stop -> ready [label=" flashStart()"];
+    ready -> stop [label=" flashStop()"];
+    ready -> read [label=" flashRead()\nflashVerifyErase()"];
+    read -> ready [label=" return"];
+    ready -> program [label=" flashProgram()"];
+    program -> ready [label=" return"];
+    ready -> erasea [label=" flashEraseAll)"];
+    erasea -> ready [label=" flashQueryErase()\nFLASH_NO_ERROR\nFLASH_ERROR_*"];
+    erasea -> erasea [label=" flashQueryErase()\nflashProgram()\nflashRead()\nFLASH_BUSY_ERASE"];
+    ready -> erases [label=" flashEraseSector()"];
+    erases -> ready [label=" flashQueryErase()\nFLASH_NO_ERROR\nFLASH_ERROR_*"];
+    erases -> erases [label=" flashQueryErase()\nflashProgram()\nflashRead()\nFLASH_BUSY_ERASE"];
+  }
+ * @enddot
+ *
  * @ingroup HAL_ABSTRACT_PERIPHERALS
  */
