git-svn-id: http://svn.osdn.net/svnroot/chibios/branches/rt7_dev@12935 27425a3e-05d8-49a3-a47f-9c15f0e5edd8

--- a/os/rt/dox/rt_arch.dox
+++ b/os/rt/dox/rt_arch.dox
@@ -142,7 +142,8 @@
  * thread_t ..> scheduler : use
  * thread_t ..> system : use
  * thread_t ..> port : use
- * thread_t o-- "0..1" thread_t : next\nprevious\nnewer\nolder\nwaiting
+ * thread_t o-- "0..1" thread_t : next\nprevious\nnewer\nolder
+ * thread_t o-- "0..*" thread_t : waiting
  *
  * scheduler ..> system : use
  * system .l.> port : use
